Correção dos erros do validador em todos os arquivos css e html dos artigos

--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micro-hábitos transformadores</title>
     <link rel="stylesheet" href="../base.css">
-    <link rel="stylesheet" href="CSS/micro-habitos.css" />
+    <link rel="stylesheet" href="CSS/micro-habitos.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
         <div class="logo">
             <a href="/FitlyApp">
-                <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+                <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
                 <h2>Fitly</h2>
             </a>
         </div>
         <nav>
-            </button>
             <ul>
                 <li>
                     <a href="/FitlyApp/">Início</a>
@@ -31,100 +32,108 @@
             </ul>
         </nav>
     </header>
-    
+
 
     <main>
-      <section class="introdução">
-        <h2>
-          Micro-hábitos de atividade física que transformam o dia sem precisar
-          de academia
-        </h2>
-        <p>
-          Muita gente pensa que para ser saudável precisa passar horas na
-          academia, mas isso não é verdade! Pequenos movimentos distribuídos ao
-          longo do dia que têm um efeito gigante na sua saúde, disposiçaõ e
-          humor. Vamos aprender como os micro-hábitos podem mudar sua vida?
-        </p>
-      </section>
-      <section class="explicação">
-          <h3>O que são micro-hábitos?</h3>
-          <p>
-              São pequenas ações que, quando feitas com frequência, trazem
-              benefícios acumulativos. O segredo é <span>constância</span>, não a
-              intensidade.
+        <section class="introdução">
+            <h2>
+                Micro-hábitos de atividade física que transformam o dia sem precisar
+                de academia
+            </h2>
+            <p>
+                Muita gente pensa que para ser saudável precisa passar horas na
+                academia, mas isso não é verdade! Pequenos movimentos distribuídos ao
+                longo do dia que têm um efeito gigante na sua saúde, disposiçaõ e
+                humor. Vamos aprender como os micro-hábitos podem mudar sua vida?
+            </p>
+        </section>
+        <section class="explicação">
+            <h3>O que são micro-hábitos?</h3>
+            <p>
+                São pequenas ações que, quando feitas com frequência, trazem
+                benefícios acumulativos. O segredo é <span>constância</span>, não a
+                intensidade.
             </p>
             <div class="Exemplos">
-          <div>
-            <h3>Exemplos práticos para incluir no dia a dia.</h3>
+                <div>
+                    <h3>Exemplos práticos para incluir no dia a dia.</h3>
+                    <ul>
+                        <li>
+                            Suba escada ao invés do elevador.
+                        </li>
+                        <li>
+                            Caminhe 10 minutos depois das refeições.
+                        </li>
+                        <li>
+                            Levante-se a cada hora para alongar os braços e as pernas.
+                        </li>
+                        <li>
+                            Faça 10 agachamentos ou flexões entre as tarefas
+                        </li>
+                    </ul>
+                </div>
+                <p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/f-9mR5ylwcE?si=RqBp8bXeHXaWtHmV"
+                        style="border: 0;"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    </iframe>
+                </p>
+            </div>
+        </section>
+        <section class="motivo">
+            <h3>
+                Por que isso funciona?
+            </h3>
+            <p>
+                Pequenas pausas ativas aumentam o gasto calórico, melhoram a circulação, reduzem dores musculares e
+                mantém o metabolismo ativo.
+            </p>
+            <p>
+                <span>Dica extra:</span> Coloque alarmes no celular para lembrar de se movimentar a cada hora.
+            </p>
+        </section>
+        <section class="exercicio">
+            <div>
+                <h3>
+                    Exercícios fáceis para casa ou trabalho:
+                </h3>
+                <ul>
+                    <li>
+                        Agachamentos (3 séries de 10).
+                    </li>
+                    <li>
+                        Polichinelos por 1 minuto.
+                    </li>
+                    <li>
+                        Alongamento de pescoço e ombros para aliviar a tensão.
+                    </li>
+                </ul>
+                <p>
+                    Não espere tempo livre para se movimentar. Escolha um micro-hábito para começar hoje e sinta a
+                    diferença na sua energia! Pequenas ações somadas todos os dias geram grandes resultados.
+                </p>
+            </div>
+            <div>
+                <img src="../Imagens/img_Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
+            </div>
+        </section>
+        <section class="referencia">
+            <h3>
+                Referências:
+            </h3>
             <ul>
-              <li>
-                Suba escada ao invés do elevador.
-              </li>
-              <li>
-                Caminhe 10 minutos depois das refeições.
-            </li>
-              <li>
-                Levante-se a cada hora para alongar os braços e as pernas.
-              </li>
-              <li>
-                Faça 10 agachamentos ou flexões entre as tarefas
-              </li>
+                <li>
+                    <a
+                        href="https://acsm.org/education-resources/trending-topics-resources/physical-activity-guidelines/">American
+                        College of Sports Medicine - Physical Activity Guidelines</a>
+                </li>
+                <li>
+                    <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Mayo
+                        Clinic - Exercise 7 benefits of regular physical activity</a>
+                </li>
             </ul>
-          </div>
-          <p>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/f-9mR5ylwcE?si=RqBp8bXeHXaWtHmV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </p>
-        </div>
-      </section>
-      <section class="motivo">
-        <h3>
-            Por que isso funciona?
-        </h3>
-        <p>
-            Pequenas pausas ativas aumentam o gasto calórico, melhoram a circulação, reduzem dores musculares e 
-            mantém o metabolismo ativo.
-        </p>
-        <p>
-            <span>Dica extra:</span>  Coloque alarmes no celular para lembrar de se movimentar a cada hora.
-        </p>
-      </section>
-      <section class="exercicio">
-        <div>
-        <h3>
-            Exercícios  fáceis para casa ou trabalho: 
-        </h3>
-        <ul>
-            <li>
-                Agachamentos (3 séries de 10).
-            </li>
-            <li>
-                Polichinelos por 1 minuto.
-            </li>
-            <li>
-                Alongamento de pescoço e ombros para aliviar a tensão.
-            </li>
-        </ul>
-        <p>
-            Não espere tempo livre para se movimentar. Escolha um micro-hábito para começar hoje e sinta a diferença na sua energia! Pequenas ações somadas todos os dias geram grandes resultados.
-        </p>
-        </div>
-        <div>
-            <img src="../Imagens/img_Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
-        </div>
-      </section>
-      <section class="referencia">
-        <h3>
-             Referências: 
-        </h3>
-        <ul>
-            <li>
-                <a href="https://acsm.org/education-resources/trending-topics-resources/physical-activity-guidelines/">American College of Sports Medicine - Physical Activity Guidelines</a>
-            </li>
-            <li>
-                <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">Mayo Clinic - Exercise 7 benefits of regular physical activity</a>
-            </li>
-        </ul>
-      </section>
+        </section>
     </main>
     <footer>
         <div>
@@ -140,13 +149,14 @@
                 </p>
                 <ul>
                     <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
+                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
                     </li>
                     <li>
-                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+                        <a target="_blank" href="https://tiktok.com/@app.fitly"><span
+                                class="fa-brands fa-tiktok"></span></a>
                     </li>
                     <li>
-                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+                        <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
                     </li>
                 </ul>
             </div>
@@ -185,10 +195,11 @@
             </div>
         </div>
         <div class="direitos">
-        <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
-        </p>
+            <p>
+                &copy; 2025 Fitly. Todos os direitos reservados.
+            </p>
         </div>
     </footer>
-  </body>
+</body>
+
 </html>
