--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -16,14 +16,14 @@
     <header>
         <div class="logo">
             <a href="/FitlyApp">
-                <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+                <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
                 <h2>Fitly</h2>
             </a>
         </div>
         <nav>
-             <button id="btn">
-        <span class="fa-solid fa-moon" id="lua"></span>
-        <span class="fa-solid fa-sun" id="sol"></span>
+            <button id="btn">
+                <span class="fa-solid fa-moon" id="lua"></span>
+                <span class="fa-solid fa-sun" id="sol"></span>
             </button>
             <ul>
                 <li>
@@ -65,74 +65,74 @@
 
         <div class="texto_e_video">
             <div>
-            <section class="dicas">
-                <h4>
-                    Dicas práticas:
-                </h4>
-                <ul>
-                    <li>
-                        <p>
-                            Monte um cardápio semanal e faça uma lista de compras completa.
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            Prepare porções de arroz integral e congele para usar aos poucos.
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            Tenha proteínas prontas (frango grelhado, ovos cozidos, carne moída temperada).
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            Lave e corte legumes para ganhar tempo nos dias corridos.
-                        </p>
-                    </li>
-                </ul>
-            </section>
-            <section class="porção">
+                <section class="dicas">
+                    <h4>
+                        Dicas práticas:
+                    </h4>
+                    <ul>
+                        <li>
+                            <p>
+                                Monte um cardápio semanal e faça uma lista de compras completa.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Prepare porções de arroz integral e congele para usar aos poucos.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Tenha proteínas prontas (frango grelhado, ovos cozidos, carne moída temperada).
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Lave e corte legumes para ganhar tempo nos dias corridos.
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+                <section class="porção">
 
-                <h3>
-                    Controle de porções sem sofrimento:
-                </h3>
-                <p>
-                    Não precisa pesar cada alimento. Use truques visuais:
-                </p>
-                <ul>
-                    <li>
-                        <p>
-                            <strong>Palma da mão:</strong> porção de proteínas.
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <strong> Punho fechado: </strong> porção de carboidratos.
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <strong>Uma colher de sopa:</strong> gordura boa (óleo).
-                        </p>
-                    </li>
-                </ul>
-                <p>
-                    Esse método reduz exageros e ajuda a manter energia e saciedade.
-            </section>
+                    <h3>
+                        Controle de porções sem sofrimento:
+                    </h3>
+                    <p>
+                        Não precisa pesar cada alimento. Use truques visuais:
+                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                <strong>Palma da mão:</strong> porção de proteínas.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong> Punho fechado: </strong> porção de carboidratos.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <strong>Uma colher de sopa:</strong> gordura boa (óleo).
+                            </p>
+                        </li>
+                    </ul>
+                    <p>
+                        Esse método reduz exageros e ajuda a manter energia e saciedade.
+                </section>
             </div>
             <div class="video">
                 <p>
-                <iframe width="315" height="560" src="https://www.youtube.com/embed/utpdYPx_EJs?si=iCIFOay1W69xnqYk"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
+                    <iframe width="315" height="560" src="https://www.youtube.com/embed/utpdYPx_EJs?si=iClFOay1W69xnqYk"
+                        title="YouTube video player" style="border: 0;"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    </iframe>
                 </p>
             </div>
         </div>
         <section class="adaptação">
-    
+
             <div>
                 <div>
                     <h3>
@@ -164,7 +164,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
+                    <img src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash%201.png" alt="Marmita_Completa">
                 </div>
             </div>
             <p>
@@ -196,96 +196,97 @@
         </section>
     </main>
 
-        <footer>
-    <div>
-      <div class="logo">
-        <a href="/FitlyApp/">
-          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-          <h2>
-            Fitly
-          </h2>
-        </a>
-        <p>
-          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-        </p>
-        <ul>
-          <li>
-            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
-          </li>
-          <li>
-            <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
-          </li>
-          <li>
-            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-          </li>
-        </ul>
-      </div>
-      <div class="mapSite">
-        <h2>
-          Indice
-        </h2>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">
-              Nosso projeto
-            </a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Referencias/">Referências</a>
-          </li>
-        </ul>
-      </div>
-      <div class="contact">
-        <h2> Contato</h2>
-        <p>
-          Tem alguma dúvida? Nos contate!
-        </p>
-        <p class="email">
-          Fitlyapp1@gmail.com
-        </p>
-        <p>
-          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-        </p>
-      </div>
-    </div>
-    <div class="direitos">
-      <p>
-        &copy; 2025 Fitly. Todos os direitos reservados.
-      </p>
-    </div>
-  </footer>
-  
-<script>
-  let eClaro = true;
-  const raiz = document.documentElement;
-  let luaImg = document.getElementById('lua');
-  let solImg = document.getElementById("sol");
-  let botaoNoturno = document.getElementById('btn');
-  let dicaExtra = document.getElementById('dica-extra');
-  botaoNoturno.addEventListener("click", function () {
-    if (eClaro) {
-      raiz.style.setProperty('--color-background', '#22333b');
-      raiz.style.setProperty('--color-text', 'white');
-      luaImg.style.display = "none";
-      solImg.style.display = "block";
-      dicaExtra.style.backgroundColor = "black";
-      eClaro = false;
-    } else {
-      raiz.style.setProperty('--color-background', '#f7f7f7');
-      raiz.style.setProperty('--color-text', '#333333');
-      luaImg.style.display = "block";
-      solImg.style.display = "none";
-      dicaExtra.style.backgroundColor = "#e6f5ff";
-      eClaro = true;
-    }
-  })
-</script>
+    <footer>
+        <div>
+            <div class="logo">
+                <a href="/FitlyApp/">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <h2>
+                        Fitly
+                    </h2>
+                </a>
+                <p>
+                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+                </p>
+                <ul>
+                    <li>
+                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://tiktok.com/@app.fitly"><span
+                                class="fa-brands fa-tiktok"></span></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="mapSite">
+                <h2>
+                    Indice
+                </h2>
+                <ul>
+                    <li>
+                        <a href="/FitlyApp/">Início</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Sobre-o-projeto/">
+                            Nosso projeto
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Artigos/">Artigos</a>
+                    </li>
+                    <li>
+                        <a href="/FitlyApp/Referencias/">Referências</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h2> Contato</h2>
+                <p>
+                    Tem alguma dúvida? Nos contate!
+                </p>
+                <p class="email">
+                    Fitlyapp1@gmail.com
+                </p>
+                <p>
+                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+                </p>
+            </div>
+        </div>
+        <div class="direitos">
+            <p>
+                &copy; 2025 Fitly. Todos os direitos reservados.
+            </p>
+        </div>
+    </footer>
+
+    <script>
+        let eClaro = true;
+        const raiz = document.documentElement;
+        let luaImg = document.getElementById('lua');
+        let solImg = document.getElementById("sol");
+        let botaoNoturno = document.getElementById('btn');
+        let dicaExtra = document.getElementById('dica-extra');
+        botaoNoturno.addEventListener("click", function () {
+            if (eClaro) {
+                raiz.style.setProperty('--color-background', '#22333b');
+                raiz.style.setProperty('--color-text', 'white');
+                luaImg.style.display = "none";
+                solImg.style.display = "block";
+                dicaExtra.style.backgroundColor = "black";
+                eClaro = false;
+            } else {
+                raiz.style.setProperty('--color-background', '#f7f7f7');
+                raiz.style.setProperty('--color-text', '#333333');
+                luaImg.style.display = "block";
+                solImg.style.display = "none";
+                dicaExtra.style.backgroundColor = "#e6f5ff";
+                eClaro = true;
+            }
+        })
+    </script>
 
 </body>
 
