--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beneficios alimentação saudavel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Beneficios alimentação saudável</title>
   <link rel="stylesheet" href="../base.css">
-  <link rel="stylesheet" href="CSS/style-beneficios.css" />
+  <link rel="stylesheet" href="CSS/style-beneficios.css">
   <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,7 +15,7 @@
   <header>
     <div class="logo">
       <a href="/FitlyApp">
-        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
         <h2>Fitly</h2>
       </a>
     </div>
@@ -33,7 +33,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <main>
     <section>
       <h1>Benefícios da alimentação equilibrada</h1>
@@ -54,12 +54,13 @@
               muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes.
               <br> <a
                 href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
-                target="_blank"> Leia mais sobre...</a></p>
+                target="_blank"> Leia mais sobre...</a>
+            </p>
           </div>
         </li>
         <li>
           <img
-            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png"
+            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash%201.png"
             alt="#">
           <div class="texto">
             <h2>Exercícios e Nutrição</h2>
@@ -79,17 +80,20 @@
         2.</p>
       <ul>
         <li>
-          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
+          <img
+            src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg"
+            alt="#">
           <div class="texto">
             <h2>Riscos do Fast Food</h2>
             <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo
               frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes.
               <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais
-                sobre...</a></p>
+                sobre...</a>
+            </p>
           </div>
         </li>
         <li>
-          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group 24.png" alt="#">
+          <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group%2024.png" alt="#">
           <div class="texto">
             <h2>Atenção aos Rótulos</h2>
             <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique
@@ -115,10 +119,10 @@
         </p>
         <ul>
           <li>
-            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
+            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
           </li>
           <li>
-            <a  href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+            <a href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
           </li>
           <li>
             <a href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
