Responsividade benefícios alimentação equilibrada

--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -52,10 +52,10 @@
             <h2>Prato ideal</h2>
             <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e
               muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes.
-              <br> <a
-                href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
-                target="_blank"> Leia mais sobre...</a>
+              <br>
             </p>
+            <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais "
+              target="_blank"> Leia mais sobre...</a>
           </div>
         </li>
         <li>
@@ -66,9 +66,9 @@
             <h2>Exercícios e Nutrição</h2>
             <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o
               desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema
-              imunológico. <br> <a
-                href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica"
-                target="_blank"> Leia mais sobre...</a></p>
+              imunológico. <br></p>
+            <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica"
+              target="_blank"> Leia mais sobre...</a>
           </div>
         </li>
       </ul>
@@ -87,9 +87,10 @@
             <h2>Riscos do Fast Food</h2>
             <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo
               frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes.
-              <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais
-                sobre...</a>
+              <br>
             </p>
+            <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais
+              sobre...</a>
           </div>
         </li>
         <li>
@@ -98,8 +99,9 @@
             <h2>Atenção aos Rótulos</h2>
             <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique
               atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por
-              porção. <br> <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank">
-                Leia mais sobre...</a></p>
+              porção. <br> </p>
+            <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank">
+              Leia mais sobre...</a>
           </div>
         </li>
       </ul>
