Responsividade página micro-hábitos

--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -56,7 +56,7 @@
             </p>
             <div class="Exemplos">
                 <div>
-                    <h3>Exemplos práticos para incluir no dia a dia.</h3>
+                    <h3>Exemplos práticos para incluir no dia a dia</h3>
                     <ul>
                         <li>
                             Suba escada ao invés do elevador.
@@ -89,7 +89,7 @@
                 Pequenas pausas ativas aumentam o gasto calórico, melhoram a circulação, reduzem dores musculares e
                 mantém o metabolismo ativo.
             </p>
-            <p>
+            <p class="dica-extra">
                 <span>Dica extra:</span> Coloque alarmes no celular para lembrar de se movimentar a cada hora.
             </p>
         </section>
