Término da responsividade dos artigos

--- a/FitlyApp/Artigos/alimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/alimentacaoEquilibrada.html
@@ -71,7 +71,7 @@
 
             <a
               href="https://sites.usp.br/rema/os-carboidratos-e-sua-importancia-para-o-corpo-humano/#:~:text=Esse%20nutriente%20%C3%A9%20o%20principal,carboidratos%20simples%20e%20carboidratos%20complexos.">Leia
-              mais sobre em...</a>
+              mais sobre carboidratos em...</a>
 
             <div>
               <img src="../Imagens/img_Artigos/img%20alimentacao-equilibrada/bread-6292215_1280%202.png"
