Correção do container da Bruna

--- a/FitlyApp/Sobre-o-projeto/index.html
+++ b/FitlyApp/Sobre-o-projeto/index.html
@@ -48,7 +48,7 @@
       <ul class="unico">
         <li class="unit">
           <strong>Bruna Ignácio Bernardes: </strong>
-          <p>
+          <p class="txt">
              Formada em nutrição, trabalha atualmente com marketing, ajudou na
             criação de vários artigos para o projeto.
           </p>
@@ -73,7 +73,7 @@
             </li>
             <li>
               <strong>Pedro José Oliveira da Roza:</strong>
-              <p>
+              <p class="txt">
               Responsável pela
                 pesquisa e auxiliar no desenvolvimento das partes estáticas do
                 site.
@@ -85,7 +85,7 @@
 
             <li>
               <strong>Victor Feliciano:</strong>
-              <p>
+              <p class="txt">
                  Responsável pela as funcionalidades do
                 site, como login e outros cálculos com dados informados pelo usuário;
               </p>
@@ -106,7 +106,7 @@
 
             <li>
               <strong>Kaue Teixeira:</strong>
-              <p>
+              <p class="txt">
                Responsável por programar as
                 partes estáticas do site, além de auxiliar na pesquisa;
               </p>
@@ -117,7 +117,7 @@
 
             <li>
               <strong>Matheus Lacerda Maximiano:</strong> Criador da
-              <p>
+              <p class="txt">
                 organização, responsável por parte da pesquisa;
               </p>
               <p>
