Aplicação do Header e Footer Responsivo em Todas As Páginas e Crianção de um Arquivo Base para Facilitar a Mudança no Código

--- a/FitlyApp/404.html
+++ b/FitlyApp/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Page</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="Base/style.css" />
+    <link rel="stylesheet" href="Base/base.css" />
     <script
       src="https://kit.fontawesome.com/a1f8cb2104.js"
       crossorigin="anonymous"
@@ -35,5 +35,6 @@
         >
       </section>
     </main>
+    <script src="Base/script.js"></script>
   </body>
 </html>
