--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="style.css?v=1" />
-    <link rel="stylesheet" href="base.css" />
-    <link rel="icon" href="/Imagens/logos/FitlyLogo.png" />
+    <link rel="stylesheet" href="Base/style.css?v=1" />
+    <link rel="stylesheet" href="Base/base.css" />
     <script>
       const images = [
         "Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
@@ -195,6 +194,6 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="Base/script.js"></script>
   </body>
 </html>
