--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="FitlyApp/style.css?v=1" />
-    <link rel="stylesheet" href="FitlyApp/base.css" />
+    <link rel="stylesheet" href="FitlyApp/Base/style.css?v=1" />
+    <link rel="stylesheet" href="FitlyApp/Base/base.css" />
     <link rel="icon" href="/Imagens/logos/FitlyLogo.png" />
     <script>
       const images = [
@@ -65,7 +65,7 @@
         </div>
       </section>
       <section id="plataforma" class="plataforma">
-        <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp" />
+        <img src="FitlyApp/Imagens/mockups/Home-portrait.png" alt="FitlyApp" />
         <h2>Nossa Plataforma</h2>
         <h4>
           A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
@@ -195,6 +195,6 @@
         <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="/FitlyApp/Base/script.js"></script>
   </body>
 </html>
