--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -5,34 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beneficios alimentação saudável</title>
-  <link rel="stylesheet" href="../base.css">
-  <link rel="stylesheet" href="CSS/style-beneficios.css">
+  <link rel="stylesheet" href="/FitlyApp/Base/base.css">
+  <link rel="stylesheet" href="css/style-beneficios.css">
   <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-  <header>
-    <div class="logo">
-      <a href="/FitlyApp">
-        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-        <h2>Fitly</h2>
-      </a>
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a href="/FitlyApp/">Início</a>
-        </li>
-        <li>
-          <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-        </li>
-        <li>
-          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+ <header>
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </h1>
+      <nav class="nav-menu">
+        <ul>
+          <li>
+            <a href="#inicio">Início</a>
+          </li>
+          <li>
+            <a href="#plataforma">Nossa Plataforma</a>
+          </li>
+          <li>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </header>
 
   <main>
     <section>
@@ -107,75 +112,71 @@
       </ul>
     </section>
   </main>
-  <footer>
-    <div>
-      <div class="logo">
-        <a href="/FitlyApp/">
-          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-          <h2>
-            Fitly
-          </h2>
-        </a>
-        <p>
-          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-        </p>
-        <ul>
-          <li>
-            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
-          </li>
-          <li>
-            <a href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
-          </li>
-          <li>
-            <a href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-          </li>
-        </ul>
+    <footer>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
       </div>
-
-      <div class="mapSite">
-        <h2>
-          Indice
-        </h2>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">
-              Nosso projeto
-            </a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Referencias/">Referências</a>
-
-          </li>
-        </ul>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
-
-      <div class="contact">
-        <h2> Contato</h2>
-        <p>
-          Tem alguma dúvida? Nos contate!
-        </p>
-        <p class="email">
-          Fitlyapp1@gmail.com
-        </p>
-        <p>
-          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-        </p>
-      </div>
-
-    </div>
-    <div class="direitos">
-      <p>
-        &copy; 2025 Fitly. Todos os direitos reservados.
-      </p>
-    </div>
-
-  </footer>
+    </footer>
+    <script src="/FitlyApp\Base\script.js"></script>
 </body>
 
 </html>
