--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -7,36 +7,38 @@
     <title>
         Organização alimentar
     </title>
-    <link rel="stylesheet" href="CSS/organização_alimentar.css">
-    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="css/organização_alimentar.css">
+    <link rel="stylesheet" href="FitlyApp/Base/base.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <a href="/FitlyApp">
-                <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-                <h2>Fitly</h2>
-            </a>
-        </div>
-        <nav>
-            <button id="btn">
-                <span class="fa-solid fa-moon" id="lua"></span>
-                <span class="fa-solid fa-sun" id="sol"></span>
-            </button>
-            <ul>
-                <li>
-                    <a href="/FitlyApp/">Início</a>
-                </li>
-                <li>
-                    <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-                </li>
-                <li>
-                    <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-                </li>
-            </ul>
-        </nav>
+ <header>
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </h1>
+      <nav class="nav-menu">
+        <ul>
+          <li>
+            <a href="#inicio">Início</a>
+          </li>
+          <li>
+            <a href="#plataforma">Nossa Plataforma</a>
+          </li>
+          <li>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
     <main>
         <section class="introducao">
