--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -1,215 +1,235 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Artigos</title>
+    <link rel="stylesheet" href="/FitlyApp/Base/base.css" />
+    <link rel="stylesheet" href="css/artigoPrincipal.css" />
+    <script
+      src="https://kit.fontawesome.com/a1f8cb2104.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Artigos</title>
-  <link rel="stylesheet" href="../base.css">
-  <link rel="stylesheet" href="CSS/artigoPrincipal.css">
-  <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-  <header>
-    <div class="logo">
-      <a href="/FitlyApp">
-        <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Logo">
-        <h2>Fitly</h2>
-      </a>
-    </div>
-    <nav>
+  <body>
+    <header>
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </h1>
       <button id="btn">
         <span class="fa-solid fa-moon" id="lua"></span>
         <span class="fa-solid fa-sun" id="sol"></span>
       </button>
-      <ul>
-        <li>
-          <a href="/FitlyApp/">Início</a>
-        </li>
-        <li>
-          <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-        </li>
-        <li>
-          <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+      <nav class="nav-menu">
+        <ul>
+          <li>
+            <a href="#inicio">Início</a>
+          </li>
+          <li>
+            <a href="#plataforma">Nossa Plataforma</a>
+          </li>
+          <li>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </header>
 
-  <main>
-    <section>
-      <h1>Artigos Principais</h1>
-      <ul id="listaDivs">
-
-        <li>
-          <h2>Alimentação equilibrada</h2>
-          <div class="tudo">
-            <a href="alimentacaoEquilibrada.html">
-              <img src="../Imagens/img_Artigos/img_alimentacao-equilibrada/fresh-fruits-2305192_1280%201.png" alt="img">
-            </a>
-            <div class="texto">
-              <p>
-                Adotar uma alimentação equilibrada é essencial para a promoção da saúde ao longo da vida, uma
-                alimentação equilibrada tambem ajuda numa serie de outras coisas.
-              </p>
+    <main>
+      <section>
+        <h1>Artigos Principais</h1>
+        <ul id="listaDivs">
+          <li>
+            <h2>Alimentação equilibrada</h2>
+            <div class="tudo">
               <a href="alimentacaoEquilibrada.html">
-                <p class="button">Acesse o Artigo</p>
+                <img
+                  src="/FitlyApp\Imagens\img_Artigos\img alimentacao-equilibrada\fresh-fruits-2305192_1280 1.png"
+                  alt="img"
+                />
               </a>
+              <div class="texto">
+                <p>
+                  Adotar uma alimentação equilibrada é essencial para a promoção
+                  da saúde ao longo da vida, uma alimentação equilibrada tambem
+                  ajuda numa serie de outras coisas.
+                </p>
+                <a href="alimentacaoEquilibrada.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
             </div>
-          </div>
-        </li>
-
-        <li>
-          <h2>Benefícios da alimentação equilibrada</h2>
-          <div class="tudo">
-            <a href="BeneficiosAlimentacaoEquilibrada.html"><img
-                src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash%201.png" alt="img"></a>
-            <div class="texto">
-              <p>
-                Uma alimentação equilibrada traz benefícios como mais energia,
-                fortalecimento da imunidade e prevenção de doenças.
-              </p>
-              <a href="BeneficiosAlimentacaoEquilibrada.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <h2>Micro-hábitos</h2>
-          <div class="tudo">
-            <a href="MicroHabitos.html"><img src="../Imagens/img_Artigos/img_artigoPrincipal/homen-02.png"
-                alt="img" /></a>
-            <div class="texto">
-              <p>
-                Pequenas ações e hábitos de atividades físicas, que possuem um
-                grande impacto quando somados e feitos com constância.
-              </p>
-              <a href="MicroHabitos.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-
-        <li>
-          <h2>Organização alimentar</h2>
-          <div class="tudo">
-            <a href="OrganizaçãoAlimentar.html"><img
-                src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash%201.png" alt="img"></a>
-            <div class="texto">
-              <p>
-                Organizar a alimentação é essencial para evitar improvisos que acabam levando a escolhas ruins. Tente
-                tirar 30, 40 minutos para planejar a semana.
-              </p>
-              <a href="OrganizaçãoAlimentar.html">
-                <p class="button">Acesse o Artigo</p>
-              </a>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <div>
-      <div class="logo">
-        <a href="/FitlyApp/">
-          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-          <h2>
-            Fitly
-          </h2>
-        </a>
-        <p>
-          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-        </p>
-        <ul>
-          <li>
-            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"></span></a>
           </li>
+
           <li>
-            <a target="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+            <h2>Benefícios da alimentação equilibrada</h2>
+            <div class="tudo">
+              <a href="BeneficiosAlimentacaoEquilibrada.html"
+                ><img
+                  src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash%201.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Uma alimentação equilibrada traz benefícios como mais energia,
+                  fortalecimento da imunidade e prevenção de doenças.
+                </p>
+                <a href="BeneficiosAlimentacaoEquilibrada.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
           </li>
+
           <li>
-            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+            <h2>Micro-hábitos</h2>
+            <div class="tudo">
+              <a href="MicroHabitos.html"
+                ><img
+                  src="../Imagens/img_Artigos/img_artigoPrincipal/homen-02.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Pequenas ações e hábitos de atividades físicas, que possuem um
+                  grande impacto quando somados e feitos com constância.
+                </p>
+                <a href="MicroHabitos.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <h2>Organização alimentar</h2>
+            <div class="tudo">
+              <a href="OrganizaçãoAlimentar.html"
+                ><img
+                  src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash%201.png"
+                  alt="img"
+              /></a>
+              <div class="texto">
+                <p>
+                  Organizar a alimentação é essencial para evitar improvisos que
+                  acabam levando a escolhas ruins. Tente tirar 30, 40 minutos
+                  para planejar a semana.
+                </p>
+                <a href="OrganizaçãoAlimentar.html">
+                  <p class="button">Acesse o Artigo</p>
+                </a>
+              </div>
+            </div>
           </li>
         </ul>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
       </div>
-      <div class="mapSite">
-        <h2>
-          Indice
-        </h2>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">
-              Nosso projeto
-            </a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Referencias/">Referências</a>
-          </li>
-        </ul>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
       </div>
-      <div class="contact">
-        <h2> Contato</h2>
-        <p>
-          Tem alguma dúvida? Nos contate!
-        </p>
-        <p class="email">
-          Fitlyapp1@gmail.com
-        </p>
-        <p>
-          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-        </p>
-      </div>
-    </div>
-    <div class="direitos">
-      <p>
-        &copy; 2025 Fitly. Todos os direitos reservados.
-      </p>
-    </div>
-  </footer>
-  <script>
-    let eClaro = true;
-    const raiz = document.documentElement;
-    let luaImg = document.getElementById('lua');
-    let solImg = document.getElementById("sol");
+    </footer>
+    <script src="/FitlyApp\Base\script.js"></script>
+    <script>
+      let eClaro = true;
+      const raiz = document.documentElement;
+      let luaImg = document.getElementById("lua");
+      let solImg = document.getElementById("sol");
 
-    let itensArtigos = document.querySelectorAll('.tudo');
-    let botaoNoturno = document.getElementById('btn');
-    botaoNoturno.addEventListener("click", function () {
-      if (eClaro) {
-        for (let item of itensArtigos) {
-          item.style.backgroundColor = "#0a0908";
+      let itensArtigos = document.querySelectorAll(".tudo");
+      let botaoNoturno = document.getElementById("btn");
+      botaoNoturno.addEventListener("click", function () {
+        if (eClaro) {
+          for (let item of itensArtigos) {
+            item.style.backgroundColor = "#0a0908";
+          }
+          //#22333b
+          raiz.style.setProperty("--color-background", "#1D201F");
+          raiz.style.setProperty("--color-text", "white");
+          luaImg.style.display = "none";
+          solImg.style.display = "block";
+          eClaro = false;
+        } else {
+          for (const item of itensArtigos) {
+            item.style.backgroundColor = "white";
+          }
+          raiz.style.setProperty("--color-background", "#f7f7f7");
+          raiz.style.setProperty("--color-text", "black");
+
+          luaImg.style.display = "block";
+          solImg.style.display = "none";
+          eClaro = true;
         }
-        //#22333b
-        raiz.style.setProperty('--color-background', '#22333b');
-        raiz.style.setProperty('--color-text', 'white');
-        luaImg.style.display = "none";
-        solImg.style.display = "block";
-        eClaro = false
-      } else {
-        for (const item of itensArtigos) {
-          item.style.backgroundColor = "white";
-        }
-        raiz.style.setProperty('--color-background', '#f7f7f7');
-        raiz.style.setProperty('--color-text', 'black');
-
-        luaImg.style.display = "block";
-        solImg.style.display = "none";
-        eClaro = true;
-      }
-    })
-  </script>
-</body>
-
-
+      });
+    </script>
+  </body>
 </html>
