--- a/FitlyApp/Referencias/index.html
+++ b/FitlyApp/Referencias/index.html
@@ -4,33 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Referencias</title>
-    <link rel="stylesheet" href="css/reset.css"/>
-    <link rel="stylesheet" href="css/Referencias.css?v=8"/>
-    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/FitlyApp/Base/base.css" />
+    <link rel="stylesheet" href="css/Referencias.css?v=8" />
+    <script
+      src="https://kit.fontawesome.com/a1f8cb2104.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
     <header>
-      <div class="logo">
-        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
-        <a href="/FitlyApp">
-          <h2>Fitly</h2>
-        </a>
-      </div>
-      <nav>
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
+        <a href="/FitlyApp"><h2>Fitly</h2></a>
+      </h1>
+      <nav class="nav-menu">
         <ul>
           <li>
-            <a href="/index.html">Início</a>
+            <a href="#inicio">Início</a>
           </li>
           <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
+            <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
           </li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
     <main>
       <section class="main">
@@ -38,138 +47,169 @@
         <ul>
           <li>
             <h2>
-              <img src="/FitlyApp/Imagens/img_referencia/Vector.png" alt="img">
+              <img
+                src="/FitlyApp/Imagens/img_referencia/Vector.png"
+                alt="img"
+              />
               Alimentação equilibrada
             </h2>
             <p>
-              <span>
-                ZERO-CAL, 
-              </span>
-              <strong>Alimentação equilibrada: qual a importância? Benefícios e mais</strong>, 08/04/2024, Disponível em: 
-              <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais?">https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais?</a>
-              . Acessado em: 15/08/2025.</p>
+              <span> ZERO-CAL, </span>
+              <strong
+                >Alimentação equilibrada: qual a importância? Benefícios e
+                mais</strong
+              >, 08/04/2024, Disponível em:
+              <a
+                href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais?"
+                >https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais?</a
+              >
+              . Acessado em: 15/08/2025.
+            </p>
           </li>
           <li>
             <h2>
-              <img src="/FitlyApp/Imagens/img_referencia/Vector_1.png" alt="img">Micro habitos
+              <img
+                src="/FitlyApp/Imagens/img_referencia/Vector_1.png"
+                alt="img"
+              />Micro habitos
             </h2>
             <p>
-              <span>
-                MAYOCLINIC, 
-              </span>
-              <strong>Exercise: 7 benefits of regular physical activity</strong>, Aug. 26, 2023.  Disponível em: 
-              <a href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389">https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389</a>
+              <span> MAYOCLINIC, </span>
+              <strong>Exercise: 7 benefits of regular physical activity</strong
+              >, Aug. 26, 2023. Disponível em:
+              <a
+                href="https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389"
+                >https://www.mayoclinic.org/healthy-lifestyle/fitness/in-depth/exercise/art-20048389</a
+              >
               . Acesso em: 22/08/2025.
             </p>
           </li>
-          
         </ul>
-          <ul>
+        <ul>
           <li>
             <h2>
-              <img src="/FitlyApp/Imagens/img_referencia/Vector_2.png" alt="img">Beneficios da alimentação equilibrada
+              <img
+                src="/FitlyApp/Imagens/img_referencia/Vector_2.png"
+                alt="img"
+              />Beneficios da alimentação equilibrada
             </h2>
             <p>
-              <span>
-                GRUPO LONGIVIDADE SAUDÁVEL, 
-              </span>
-              <strong>O perigo dos fast foods</strong>, 07 / mar / 2023,  Disponível em:  <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/">https://longevidadesaudavel.com.br/perigos-do-fast-foods/</a>
+              <span> GRUPO LONGIVIDADE SAUDÁVEL, </span>
+              <strong>O perigo dos fast foods</strong>, 07 / mar / 2023,
+              Disponível em:
+              <a
+                href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/"
+                >https://longevidadesaudavel.com.br/perigos-do-fast-foods/</a
+              >
               . Acesso em: 15/08/2025.
             </p>
             <p>
-              <span>
-                INSTITUTO COMO VENCER O CANCER, 
-              </span>
-              <strong>Como ler o rótulo de um alimento</strong>, 25 de agosto de 2020.  Disponível em: <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/">https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/</a>
-              . Acesso em: 15/08/2025.</p>
+              <span> INSTITUTO COMO VENCER O CANCER, </span>
+              <strong>Como ler o rótulo de um alimento</strong>, 25 de agosto de
+              2020. Disponível em:
+              <a
+                href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/"
+                >https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/</a
+              >
+              . Acesso em: 15/08/2025.
+            </p>
           </li>
           <li>
             <h2>
-              <img src="/FitlyApp/Imagens/img_referencia/Vector_3.png" alt="img">Organização alimentar
+              <img
+                src="/FitlyApp/Imagens/img_referencia/Vector_3.png"
+                alt="img"
+              />Organização alimentar
             </h2>
             <p>
-              <span>
-                HARVARD T.H. CHAN, 
-              </span>
-              <strong>Healthy Eating Plate</strong>, Disponível em: 
-              <a href="https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/">https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/</a>
+              <span> HARVARD T.H. CHAN, </span>
+              <strong>Healthy Eating Plate</strong>, Disponível em:
+              <a
+                href="https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/"
+                >https://nutritionsource.hsph.harvard.edu/healthy-eating-plate/</a
+              >
               . Acesso em: 29/08/2025.
             </p>
             <p>
-              <span>
-                HEART ORG,  
-              </span>
+              <span> HEART ORG, </span>
               <strong>Healthy Eating</strong>
-              , Disponível em: 
-              <a href=" https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%20processed%20foods%20whenever%20possible"> https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally% <br>20processed%20foods%20whenever%20possible</a>
+              , Disponível em:
+              <a
+                href=" https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%20processed%20foods%20whenever%20possible"
+              >
+                https://www.heart.org/en/healthy-living/healthy-eating#:~:text=Over%20time%2C%20load%20up%20on,minimally%
+                <br />20processed%20foods%20whenever%20possible</a
+              >
               . Acesso em: 29/08/2025.
             </p>
           </li>
         </ul>
       </section>
-		    <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="/FitlyApp/Imagens/img_referencia/Vector_2.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
-                    </li>
-                    <li>
-                        <a arget="_blank" href="https://tiktok.com/@app_fitly"><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                    <li>
-                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Referencias/">Referências</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
-        </div>
-        <div class="direitos">
-        <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
-        </p>
-        </div>
-    </footer>
     </main>
+    <footer>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
+      </div>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+      </div>
+    </footer>
+    <script src="/FitlyApp\Base\script.js"></script>
   </body>
+</html>
